[package]
name = "custom-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
eyre = "0.6"
futures-util = "0.3.31"

# Reth dependencies (pull from GitHub)
reth = { git = "https://github.com/paradigmxyz/reth.git", package = "reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-node-ethereum" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-node-builder" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-ethereum-cli" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-cli-util" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-ethereum", features = ["node", "pool", "cli", "rpc"] }

# Alloy dependencies
alloy-rpc-types-eth = "1.0.23"
alloy-primitives = "1.3.0"
alloy-eips = "1.0.23"
alloy-sol-types = "1.3.0"
