[package]
name = "custom-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
eyre = "0.6"

# Reth dependencies (pull from GitHub)
reth = { git = "https://github.com/paradigmxyz/reth.git"  }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git" , features = ["node", "pool", "cli", "rpc"]}
